Fixed mobile and desktop  horizontal scroll

--- a/src/input.css
+++ b/src/input.css
@@ -40,3 +40,6 @@ iframe {
 #tidio-chat-iframe {
 	inset: 0;
 }
+body{
+	overflow-x: hidden;
+}
